fixed table overflow

--- a/src/pages/index/index.css
+++ b/src/pages/index/index.css
@@ -608,6 +608,20 @@ footer {
 }
 
 @media (max-width: 480px) {
+  main {
+    padding: 0;
+  }
+
+  .boxes{
+    width: 100%;
+    padding: 0;
+  }
+
+  .box {
+    padding: 10px;
+    overflow-wrap: anywhere;
+  }
+
   .step-label {
     display: none;
   }
